samples/_failures_safe/1761247480_c811c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_713a103b.c: In function ‘main’:
./samples/SAFE/__tmp_713a103b.c:170:16: error: missing terminating " character
  170 |         printf("
      |                ^
./samples/SAFE/__tmp_713a103b.c:170:9: error: expected expression at end of input
  170 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_713a103b.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_713a103b.c:170:9: error: expected declaration or statement at end of input
